--- a/package.json
+++ b/package.json
@@ -3,17 +3,24 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-spring/web": "^9.7.3",
+    "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "bootstrap": "^5.3.2",
-    "postcss-cli": "^10.1.0",
+    "bootstrap": "^5.3.1",
+    "lottie-react": "^2.4.0",
+    "lottie-web": "^5.12.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.11.0",
+    "react-icons": "^4.10.1",
     "react-redux": "^8.1.2",
+    "react-responsive": "^9.0.2",
+    "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.8.9",
+    "react-spring": "^9.7.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
